--- a/assets/css/appResume/basic/templates/style.scss
+++ b/assets/css/appResume/basic/templates/style.scss
@@ -1,5 +1,7 @@
 
 // templates
+@import 'ui/photo';
+@import 'template1/style';
 @import 'template1/style';
 @import 'template2/style';
 @import 'template3/style';
