--- a/assets/css/sections/jptest/_jptest.scss
+++ b/assets/css/sections/jptest/_jptest.scss
@@ -163,10 +163,7 @@ jptest-content {
         height:550px;
         @extend .ml--s;
 
-        html.d-tablet.r-landscape & {
-            width:480px;
-            height:480px;
-        }
+        html.d-tablet.r-landscape &,
         html.d-phone & {
             width:480px;
             height:480px;
