--- a/assets/css/sections/list/_resumeItem.scss
+++ b/assets/css/sections/list/_resumeItem.scss
@@ -314,6 +314,7 @@
         }
     }
     &__photo {
+        @include accelerate(true);
         @extend .w60;
         @extend .h60;
         @extend .bg-cover;
