--- a/assets/templates/appResume/basic/sections/buttons.html
+++ b/assets/templates/appResume/basic/sections/buttons.html
@@ -10,7 +10,7 @@
             <icon-camera size="s" color="blue"></icon-camera>
         </div>
     </div>
-    <div onClick={ parent.open.design.free } onUpdate="none" class="control__buttons__item" data-balloon="Выбор шаблона" data-balloon-color="blue" data-balloon-pos="down">
+    <div onClick={ parent.open.design.free } onUpdate="none" class="control__buttons__item" data-balloon="Выбор дизайна" data-balloon-color="blue" data-balloon-pos="down">
         <div class="control__buttons__item__icon">
             <icon-design size="s" color="blue"></icon-design>
         </div>
