--- a/assets/templates/sections/list/resumeItemBlank.html
+++ b/assets/templates/sections/list/resumeItemBlank.html
@@ -6,7 +6,7 @@
             <div class="resume__item__control__btn resume__item__control__menu"></div>
         </div>
         <div class="resume__item__control__right">
-            <div class="resume__item__noview" data-active="true"></div>
+            <div class="resume__item__preview"></div>
             <div class="resume__item__inbox" data-active="true">
                 <div class="resume__item__inbox__badge">9</div>
             </div>
