--- a/assets/templates/sections/offers/welcome.html
+++ b/assets/templates/sections/offers/welcome.html
@@ -4,11 +4,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-22 centered c-white anim anim-scale-ease" duration-hide="s">
-                    <h1 class="mb-m">Мы приветствуем Вас и рады помочь</h1>
-                    <h3 class="fontWeight-normal mb-l">Предлагаем начать обзор функционала с главного экрана интерфейса</h3>
+                    <h1 class="mb-m">Мы приветствуем Вас в своем кабинете</h1>
+                    <h3 class="fontWeight-normal mb-l">Предлагаем пройти быстрый обзор главного функционала интерфейса</h3>
                     <div class="opacity-70 fontSize-15 letterSpacing-5-5 text-uppercase mb-l">Это займет менее 2 минут</div>
                     <div onClick={ showTutorial } class="btn btn-xxl btn-white-hover mlr-xs">Начать</div>
-                    <div onClick={ close } class="btn btn-xxl btn-white-hover mlr-xs">Потом</div>
+                    <div onClick={ close } class="btn btn-xxl btn-white-hover mlr-xs">Не нужно</div>
                 </div>
             </div>
         </div>
