--- a/assets/templates/sections/stat/resumeStat.html
+++ b/assets/templates/sections/stat/resumeStat.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div onClick={ open.changeResume } onUpdate="none" class="resume__stat__title">
-                        <div class="resume__stat__title__value">{ item.get('post') }</div>
+                        <div class="resume__stat__title__value">{ item.get('post') || 'Новое резюме' }</div>
                     </div>
                 </div>
                 <div class="col-md-16">
