--- a/assets/css/sections/list/_resumePreview.scss
+++ b/assets/css/sections/list/_resumePreview.scss
@@ -12,6 +12,9 @@
         @extend .centered;
         width:1218px;
     }
+    html.d-xlargeScreen & {
+        @extend .w75v;
+    }
     html.d-mobile & {
         margin:1.64vw auto 2.34vw;
         width:95.15vw;
@@ -28,73 +31,5 @@
     }
     a {
         @extend .pointerEvents-none;
-    }
-    .t-header-photo {
-        position: absolute;
-        width: 276px;
-        height: 276px;
-
-        html.m-no-touch & {
-            &:hover {
-                .t-header-photo-image {
-                    opacity: 0.85;
-                }
-                .icon {
-                    top: 50%;
-                    opacity: 0.85;
-                }
-            }
-        }
-    }
-    .t-header-photo-image {
-        width: 276px;
-        height: 276px;
-        background-repeat: top center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        border-radius: 50%;
-        transition: opacity 0.1s ease;
-    }
-    .t-header-photo .icon,
-    .t-header-photo span {
-        display: none;
-    }
-    .t-header-photo .icon {
-        display: block;
-        position: absolute;
-        top: 65%;
-        left: 50%;
-        margin: -64px 0 0 -66px;
-        width: 128px;
-        height: 128px;
-        background: url("/assets/images/ui/ui-upload_white.svg") no-repeat 0 0 / cover;
-        transition: all 0.25s ease;
-        opacity: 0;
-        z-index: 1;
-    }
-    .t-header-photo.place {
-        border: 3px dashed rgba(#265cdc,.8);
-    }
-    .t-header-photo.place span {
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        margin-top: 50px;
-        color: #265cdc;
-        opacity: 0.8;
-        font: bold 16px/24px "Gotham", Helvetica;
-        padding: 0 30px;
-        text-align: center;
-        box-sizing: border-box;
-        text-transform: uppercase;
-    }
-    .t-header-photo.place .icon {
-        top: 50%;
-        margin-top: -90px;
-        background-image: url("/assets/images/ui/ui-upload.svg");
-        opacity: 0.85;
-        transition: none;
     }
 }
