--- a/assets/css/sections/master/_masterContent.scss
+++ b/assets/css/sections/master/_masterContent.scss
@@ -9,9 +9,9 @@
             line-height:62px;
             @extend .pointerEvents-none;
 
-            .d-xlargeScreen & {
-                font-size:72px;
-            }
+            // .d-xlargeScreen & {
+            //     font-size:72px;
+            // }
             &__inner {
                 @extend .pos-rel;
                 @include accelerate();
@@ -31,9 +31,9 @@
                     @extend .borderRadius-xs;
                     @extend .zIndex--1;
 
-                    .d-xlargeScreen & {
-                        @extend .t85;
-                    }
+                    // .d-xlargeScreen & {
+                    //     @extend .t85;
+                    // }
                 }
             }
         }
@@ -97,23 +97,23 @@
         @extend .letterSpacing-xs;
         @extend .pointerEvents-none;
 
-        .d-xlargeScreen & {
-            font-size:23.5px;
-            @extend .letterSpacing-xs;
-
-            &[data-pos="left"]{
-                left:9.375vw;
-            }
-            &[data-pos="right"]{
-                right:9.375vw;
-            }
-            &[data-pos="top"]{
-                top:8.58vh;
-            }
-            &[data-pos="bottom"]{
-                bottom:8.58vh;
-            }
-        }
+        // .d-xlargeScreen & {
+        //     font-size:23.5px;
+        //     @extend .letterSpacing-xs;
+        //
+        //     &[data-pos="left"]{
+        //         left:9.375vw;
+        //     }
+        //     &[data-pos="right"]{
+        //         right:9.375vw;
+        //     }
+        //     &[data-pos="top"]{
+        //         top:8.58vh;
+        //     }
+        //     &[data-pos="bottom"]{
+        //         bottom:8.58vh;
+        //     }
+        // }
         html.d-tablet & {
             font-size:20px;
             @extend .letterSpacing-xs;
@@ -150,9 +150,9 @@
             @extend .pb-s;
             @extend .willChange-tp;
 
-            .d-xlargeScreen & {
-                @extend .pb-m;
-            }
+            // .d-xlargeScreen & {
+            //     @extend .pb-m;
+            // }
             html.m-no-touch &:hover {
                 .master__block__link {
                     @extend .c-yellowBright;
