--- a/assets/css/ui/basic/_loaderAjax.scss
+++ b/assets/css/ui/basic/_loaderAjax.scss
@@ -1,24 +1,19 @@
 .loader-ajax {
-    @extend .flex-centered;
+    @extend .display-none;
     @extend .pointerEvents-none;
     @extend .pos-fixed;
     @extend .t-s;
     @extend .l0;
     @extend .ml-l;
     @extend .xs-ml-s;
-    @extend .opacity-0;
-    @extend .willChange-opacity;
+    @extend .w32;
+    @extend .h32;
+    @extend .bg-white;
+    @extend .borderRadius-circle;
     @extend .zIndex-100;
 
-    html.d-phone & {
-        @extend .w32;
-        @extend .h32;
-        @extend .bg-white;
-        @extend .borderRadius-circle;
-    }
     &[data-show="true"]{
-        @extend .opacity-100;
-        transition:opacity 0s 0.2s;
+        @extend .flex-centered;
 
         .loader-ajax-spinner {
             @extend .spinner-mini-anim;
