--- a/assets/templates/appResume/basic/sections/menu.html
+++ b/assets/templates/appResume/basic/sections/menu.html
@@ -20,7 +20,7 @@
         <div class="section__menu__item__icon">
             <icon-design size="l" color="white"></icon-design>
         </div>
-        <div class="section__menu__item__title">Выбор шаблона</div>
+        <div class="section__menu__item__title">Выбор дизайна</div>
     </div>
     <div onClick={ parent.get.pdf } onUpdate="none" class="section__menu__item">
         <div class="section__menu__item__icon">
@@ -28,23 +28,11 @@
         </div>
         <div class="section__menu__item__title">Сохранить в PDF</div>
     </div>
-    <div class="section__menu__item">
-        <div class="section__menu__item__icon">
-            <icon-crown size="l" color="white"></icon-crown>
+    <div onClick={ parent.change.lang } class="section__menu__item">
+        <div class="section__menu__item__icon" data-item="lang">
+            { $resume.get('lang') }
         </div>
-        <div class="section__menu__item__title">Premium резюме</div>
-    </div>
-    <div class="section__menu__item">
-        <div class="section__menu__item__icon">
-            <icon-feedback size="l" color="white"></icon-feedback>
-        </div>
-        <div class="section__menu__item__title">Отправить на почту</div>
-    </div>
-    <div class="section__menu__item">
-        <div class="section__menu__item__icon">
-            <icon-share size="l" color="white"></icon-share>
-        </div>
-        <div class="section__menu__item__title">Поделиться резюме</div>
+        <div class="section__menu__item__title">Изменить язык</div>
     </div>
 
 <script>
