--- a/assets/templates/appResume/basic/templates/template8.html
+++ b/assets/templates/appResume/basic/templates/template8.html
@@ -2,12 +2,12 @@
 
 	<div id="t-circle-bg"></div>
 	<div id="t-header">
-		<div if={ $resume.get('photo') } id="upload-photo" class="t-header-photo">
-			<div class="t-header-photo-image" style="background-image:url({ $resume.get('photo') })"></div>
+		<div if={ $resume.get('commons', 'photo') } id="upload-photo" class="t-header-photo">
+			<div class="t-header-photo-image" style="background-image:url({ $resume.get('commons', 'photo') })"></div>
 			<i class="icon"></i>
 			<div class="img-shadow"></div>
 		</div>
-		<div if={ !$resume.get('photo') } id="upload-photo" class="t-header-photo place">
+		<div if={ !$resume.get('commons', 'photo') } id="upload-photo" class="t-header-photo place">
 			<i class="icon"></i>
 			<span>загрузить свою фотографию</span>
 		</div>
