--- a/views/private.html
+++ b/views/private.html
@@ -3,7 +3,7 @@
 <head>
     <title>Личный кабинет // ResumeKraft</title>
     <meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width={% if device == 'tablet' %}1000{% else %}device-width{% endif %}, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta property="og:image" content="/assets/images/favicons/120.png" />
     <meta property="og:title" content="Создать крутое резюме самому!" />
 	<meta property="og:description" content="ResumeKraft - сервис создания премиальных резюме с продающим дизайном." />
@@ -49,9 +49,14 @@
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
 
+    <script src="/assets/templates/appResume/basic/section-content.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resumeItemBlank.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/offers/welcome.html" type="riot/tag"></script>
+
+
     <script src="/assets/js/app.js"></script>
-    <script src="/assets/js/store/data.js"></script>
-    <script src="/assets/js/components/fetch.js"></script>
+    <script src="/assets/js/components/tutorial/resume/free/interface.js"></script>
+    <script src="/assets/js/components/tutorial/welcome.js"></script>
     <!-- <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script> -->
 
@@ -79,6 +84,7 @@
     <script src="/assets/js/store/resume/premium/fonts.js"></script>
     <script src="/assets/js/store/resume/premium/hobby.js"></script>
     <script src="/assets/js/store/resume/premium/resume.demo.js"></script> -->
+    <script src="/assets/js/components/config.js"></script>
     <script src="/assets/js/components/init.js"></script>
 
     <!-- <script src="/assets/js/libs.js"></script>
